syntax = "proto3";
option go_package = ".;pb";
service Task {
  rpc GetTaskMeta(GetTaskMetaRequest) returns (GetTaskMetaResponse) {}
}

message GetTaskMetaRequest {
  int64 id = 1;
}

message GetTaskMetaResponse {
  string name = 1;
}

